--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^4.0.6
+  firebase_core: ^2.4.1
+  json_annotation: ^4.8.0
+  pretty_dio_logger: ^1.2.0-beta-1
+  retrofit: ^3.3.1
+  retrofit_generator: ^4.2.0
+  json_serializable: ^6.6.0
+  freezed_annotation: ^2.2.0
+  freezed: ^2.3.2
+  build_runner: ^2.3.3
 
 dev_dependencies:
   flutter_test:
